--- a/HotelManager/templates/inc/navbar.html
+++ b/HotelManager/templates/inc/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-dark navbar-dark border-bottom">
   <div class="container-fluid">
-    <a class="navbar-brand">Navbar</a>
+    <a class="navbar-brand">Tourism System</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -8,15 +8,15 @@
       <ul class="navbar-nav">
         {% if request.user.is_authenticated %}
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'home:home' %}">Home</a>
+              <a class="nav-link active" aria-current="page" href="{% url 'home:profile' %}">Profile</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'home:report' %}">Report</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="{% url 'accounts:user_logout' %}">Logout</a>
             </li>
         {% else %}
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'home:home' %}">Home</a>
-            </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="{% url 'accounts:user_register' %}">Register</a>
             </li>
@@ -24,15 +24,7 @@
               <a class="nav-link active" aria-current="page" href="{% url 'accounts:user_login' %}">Login</a>
             </li>
         {% endif %}
-        {% if request.user.is_admin %}
-            <li class="nav-item">
-{#              <a class="nav-link active" aria-current="page" href="{% url 'home:bucket' %}">Bucket</a>#}
-            </li>
-        {% endif %}
-            <li class="nav-item">
-{#                cart inja esm klid to contextprocessors e na esm tabe#}
-              <a class="nav-link active" aria-current="page" href="{% url 'orders:cart' %}">Cart {{ cart|length }}</a>
-            </li>
+
       </ul>
     </div>
   </div>
