HotelManager | base.html | Modified

--- a/HotelManager/templates/base.html
+++ b/HotelManager/templates/base.html
@@ -18,7 +18,7 @@
 </head>
 <body class="bg-dark text-light">
 
-{#    {% include 'inc/navbar.html' %}#}
+{% include 'inc/navbar.html' %}
 <div class="container-fluid p-5">
     {% include 'inc/messages.html' %}
     {% block content %}{% endblock %}
