--- a/HotelManager/home/templates/home/detail.html
+++ b/HotelManager/home/templates/home/detail.html
@@ -61,7 +61,7 @@
             {{ form }}
             <button type="submit" class="btn btn-primary">Payment</button>
         </form>
-
+</form>
     </div>
 
 
