--- a/HotelManager/templates/inc/navbar.html
+++ b/HotelManager/templates/inc/navbar.html
@@ -1,11 +1,14 @@
 <nav class="navbar navbar-expand-lg bg-dark navbar-dark border-bottom">
   <div class="container-fluid">
-    <a class="navbar-brand">Tourism System</a>
+    <a class="navbar-brand" href="{% url 'home:landing' %}">Tourism System</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
+          <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'home:packages' %}">Packages</a>
+            </li>
         {% if request.user.is_authenticated %}
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="{% url 'home:profile' %}">Profile</a>
